--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -32,12 +33,14 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "motion": "^12.6.5",
     "next": "^14.2.28",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
